# cvmfs

./: .clang-tidy  .codespellrc  .dir-locals.el  .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  CMakeLists.txt-e  CONTRIBUTING.md  COPYING  CPPLINT.cfg  CPackLists.txt  ChangeLog  INSTALL  Makefile  README  README.md  Vagrantfile  bootstrap.sh  bump_version.sh  changelog-commit.sh  changelog-start.sh  commit.sh  config_cmake.h.in  cpplint.py  cpplint.py.cvmfs-patch  cpplint.py.rev141  get_redhat_version.sh  go.mod  go.sum  install-deps.sh  main.go  make_cvmfs  note-install-prefix  re-engineering notes  rebar.config  send_stats_to_graphite.py  sign-whitelist  (+7 more)
containerd-snapshotter/: CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cvmfs/: AbstractCatalogManager.cc  AbstractCatalogManager.h  CMakeLists.txt  CPPLINT.cfg  Catalog.cc  Catalog.h  DirectoryEntry.h  RemoteCatalogManager.cc  RemoteCatalogManager.h  SyncItem.cc  SyncItem.h  SyncMediator.cc  SyncMediator.h  SyncUnion.cc  SyncUnion.h  SyncUnionAufs.cc  SyncUnionAufs.h  WritableCatalog.cc  WritableCatalog.h  WritableCatalogManager.cc  WritableCatalogManager.h  atomic.h  auto_umount.cc  auto_umount.h  backoff.cc  backoff.h  bigqueue.h  bigvector.h  bulk_crc32.c  bulk_crc32.h  bundle.cc  bundle.h  cache.cc  cache.cc~  cache.h  cache.h~  cache.pb.cc  cache.pb.h  cache.proto  cache_extern.cc  (+435 more)
cvmfs-keys/: CMakeLists.txt
cvmfs-keys/domain.d/: opensciencegrid.org.conf
cvmfs-keys/keys/: cern-it3.cern.ch.pub
cvmfs/authz/: authz.cc  authz.h  authz_curl.cc  authz_curl.h  authz_fetch.cc  authz_fetch.h  authz_session.cc  authz_session.h  cred_fetcher.cc  helper_allow.cc  helper_deny.cc  helper_log.cc  helper_log.h  helper_util.cc  helper_util.h  voms_cred.cc  x509_helper.cc  x509_helper_base64.cc  x509_helper_base64.h  x509_helper_check.cc  x509_helper_check.h  x509_helper_dynlib.cc  x509_helper_dynlib.h  x509_helper_fetch.cc  x509_helper_fetch.h  x509_helper_globus.cc  x509_helper_globus.h  x509_helper_log.cc  x509_helper_log.h  x509_helper_req.cc  x509_helper_req.h  x509_helper_voms.cc  x509_helper_voms.h
cvmfs/bash_completion/: cvmfs.bash_completion
cvmfs/bridge/: CMakeLists.txt  compat.cc  compat.h  ds_stubs.cc  ds_stubs.h  marshal.cc  marshal.h  migrate.cc  migrate.h
cvmfs/cache_plugin/: channel.cc  channel.h  cvmfs_cache_chirp.c  cvmfs_cache_null.cc  cvmfs_cache_posix.cc  cvmfs_cache_ram.cc  libcvmfs_cache.cc  libcvmfs_cache.h  libcvmfs_cache_options.cc  libcvmfs_cache_public_syms.txt
cvmfs/cli/: enter.cc
cvmfs/compression/: compression.cc  compression.h  compressor_echo.cc  compressor_echo.h  compressor_zlib.cc  compressor_zlib.h  compressor_zstd.cc  compressor_zstd.h  decompression.cc  decompression.h  decompressor_echo.cc  decompressor_echo.h  decompressor_zlib.cc  decompressor_zlib.h  decompressor_zstd.cc  decompressor_zstd.h  echo.cc  echo.h  input_abstract.h  input_cache.cc  input_cache.h  input_file.cc  input_file.h  input_mem.cc  input_mem.h  input_path.cc  input_path.h  util.cc  util.h  zlib.cc  zlib.h
cvmfs/crypto/: CMakeLists.txt  crypto_util.cc  crypto_util.h  encrypt.cc  encrypt.h  hash.cc  hash.h  openssl_version.h  signature.cc  signature.h  signature_offload.cc
cvmfs/cvmfs/: cipher.cc  cipher.h
cvmfs/doc/: README-spooler  abort.txt  add-replica.txt  catalog-chown.txt  check.txt  checkout.txt  cvmfs_server.txt  diff.txt  examples.txt  gc.txt  import.txt  info.txt  ingest.txt  list-catalogs.txt  list.txt  masterkeycard.txt  merge-stats.txt  migrate.txt  mkfs.txt  mount.txt  print-stats.txt  publish.txt  resign.txt  rmfs.txt  rollback.txt  snapshot.txt  tag.txt  transaction.txt  update-geodb.txt  update-info.txt  update-repoinfo.txt
cvmfs/export_plugin/: fs_traversal.cc  fs_traversal.h  fs_traversal_interface.h  fs_traversal_libcvmfs.cc  fs_traversal_libcvmfs.h  fs_traversal_posix.cc  fs_traversal_posix.h  shrinkwrap.cc  spec_tree.cc  spec_tree.h  util.cc  util.h
cvmfs/file_processing/: async_reader.cc  async_reader.h  async_reader_impl.h  char_buffer.h  chunk.cc  chunk.h  chunk_detector.cc  chunk_detector.h  file.cc  file.h  file_processor.cc  file_processor.h  file_scrubbing_task.h  io_dispatcher.cc  io_dispatcher.h  processor.cc  processor.h
cvmfs/garbage_collection/: garbage_collector.h  garbage_collector_impl.h  garbage_detector.h  garbage_detector_impl.h  gc_aux.h  gc_aux_impl.h  hash_filter.h
cvmfs/ingestion/: chunk_detector.cc  chunk_detector.h  ingestion_source.cc  ingestion_source.h  item.cc  item.h  item_mem.cc  item_mem.h  pipeline.cc  pipeline.h  task.cc  task.h  task_chunk.cc  task_chunk.h  task_compress.cc  task_compress.h  task_compression.cc  task_compression.h  task_hash.cc  task_hash.h  task_read.cc  task_read.h  task_register.cc  task_register.h  task_write.cc  task_write.h  tube.cc  tube.h
cvmfs/network/: direct_download.cc  direct_download.h  dns.cc  dns.h  download.cc  download.h  health_check.h  jobinfo.cc  jobinfo.h  network_errors.h  parallel_download_coordinator.cc  parallel_download_coordinator.h  s3fanout.cc  s3fanout.h  sharding_policy.h  sink.h  sink_file.cc  sink_file.h  sink_mem.cc  sink_mem.h  sink_null.h  sink_path.cc  sink_path.h
cvmfs/notify/: cmd_pub.cc  cmd_pub.h  cmd_sub.cc  cmd_sub.h  (+15 more)
cvmfsd/: CMakeLists.txt  cvmfs-sync  cvmfs_server_hooks.sh  cvmfsd.initd  server.conf
ducc/: CMakeLists.txt  Makefile  README.md  go.mod  go.sum  loop.sh  main.go
gateway/: .dir-locals.el  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  README.md  go.mod  go.sum  main.go  rebar.config  version
mount/: CMakeLists.txt  auto.cvmfs  auto.cvmfs.cc  auto_cvmfs  config.sh  cvmfs.initd  default.conf  mount.cvmfs  mount.cvmfs.cc  serverorder.sh  umount.cvmfs
replica/: CMakeLists.txt  Makefile.am  cvmfs_snapshot  etc.httpd.conf.d.replica.conf
snapshotter/: CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
trunk/: AUTHORS  CMakeLists.txt  ChangeLog  FAQ  Makefile.am  acinclude.m4  aclocal.m4  bootstrap.sh  config_cmake.h.in  configure.ac  loc.sh
(+3089 files in other folders)
